--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import "http://webfonts.ru/import/ostrich.css";
+/*@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,300,700);*/
 
 /*
   	RESET
