--- a/styles.css
+++ b/styles.css
@@ -1,142 +1,126 @@
 @import "http://webfonts.ru/import/ostrich.css";
-/*@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,300,700);*/
+@import "http://webfonts.ru/import/bebasneue.css";
 
-/*
-  	RESET
-*/
-/**
- * html5doctor.com Reset Stylesheet v1.6.1 (http://html5doctor.com/html-5-reset-stylesheet/)
- * Richard Clark (http://richclarkdesign.com)
- * http://cssreset.com
- */
-html, body, div, span, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-abbr, address, cite, code,
-del, dfn, em, img, ins, kbd, q, samp,
-small, strong, sub, sup, var,
-b, i,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section, summary,
-time, mark, audio, video {
-    margin:0;
-    padding:0;
-    border:0;
-    outline:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
-    box-sizing: border-box;
+html {
+    height: 100%;
 }
-body {
-    line-height:1;
-}
-article,aside,details,figcaption,figure,
-footer,header,hgroup,menu,nav,section {
-    display:block;
-}
-nav ul {
-    list-style:none;
-}
-blockquote, q {
-    quotes:none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content:'';
-    content:none;
-}
-a {
-    margin:0;
-    padding:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
-}
-/* change colours to suit your needs */
-ins {
-    background-color:#ff9;
-    color:#000;
-    text-decoration:none;
-}
-/* change colours to suit your needs */
-mark {
-    background-color:#ff9;
-    color:#000;
-    font-style:italic;
-    font-weight:bold;
-}
-del {
-    text-decoration: line-through;
-}
-abbr[title], dfn[title] {
-    border-bottom:1px dotted;
-    cursor:help;
-}
-table {
-    border-collapse:collapse;
-    border-spacing:0;
-}
-/* change border colour to suit your needs */
-hr {
-    display:block;
-    height:1px;
-    border:0;
-    border-top:1px solid #cccccc;
-    margin:1em 0;
-    padding:0;
-}
-input, select {
-    vertical-align:middle;
-}
-
-
-/*
-	END RESET
-*/
-
 
 body {
-	font-family: 'Ostrich Sans';
+	font-family: 'Ostrich Sans', sans-serif;
+    height: 100%;
 }
 /* HELPERS */
 
 .hide {
-	display: none;
+	display: none !important;
 }
 
 .show {
 	display: block;
 }
 
+/* ANIMATION */
+
+@keyframes rotate {
+    0% {
+        transform: rotateZ(0deg);
+        -webkit-transform: rotateZ(0deg);
+    }
+    100% {
+        transform: rotateZ(360deg);
+        -webkit-transform: rotateZ(360deg);
+    }
+}
+
+@-webkit-keyframes rotate {
+    0% {
+        transform: rotateZ(0deg);
+        -webkit-transform: rotateZ(0deg);
+    }
+    100% {
+        transform: rotateZ(360deg);
+        -webkit-transform: rotateZ(360deg);
+    }
+}
+
+/* BASE */
+
 .main-section {
 	height: 100%;
 	padding: 20px;
 	color: rgba(0,0,0, 0.7);
+    display: flex;
+    flex-direction: column;
 }
 
 h1 {
 	font-size: 48px;
-	/*margin-bottom: 20px;*/
+    margin: 0;
 }
 
 h2 {
 	font-size: 30px;
-	margin-bottom: 70px;
+    margin: 0;
 }
+.circle-wrapper {
+    color: white;
+    text-align: center;
+    position: fixed;
+    width: 200px;
+    height: 200px;
+    top: 50%;
+    left: 50%;
+    margin-top: -70px;
+    margin-left: -100px;
+}
+
 .circle {
-	border-radius: 50%;
-	width: 200px;
-	color: white;
-	height: 200px;
-	background-color: rgba(255, 21, 21, 0.7);
-	text-align: center;
-	margin: auto;
-	color: white;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+.circle .circle-button {
+    fill: rgba(255, 174, 174, 0.65);
+}
+
+.circle .circle-loading {
+    fill: rgb(255, 104, 104);
+}
+
+.rotate {
+    animation: rotate 3s linear infinite;
+    -webkit-animation: rotate 3s linear infinite;
 }
 .circle-phrase {
 	line-height: 200px;
 	font-size: 48px;
+    position: relative;
+    z-index: 3;
 } 
+.result {
+    height: 100vh;
+    padding: 20px 0;
+    font-family: 'Bebas Neue', sans-serif;
+    font-weight: 300;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+.venue-name {
+    font-weight: 400;
+}
+.venue-address {
+    font-family: sans-serif;
+    margin-bottom: 20px;
+    color: #333;
+}
+#map-canvas {
+    width: 100%;
+    flex-grow: 1;
+    margin: 0;
+    padding: 0;
+}
+
